# alstm-stock-market

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.in  requirements.txt
alstm_stock_market/: run.py
alstm_stock_market/src/: data.py  model.py  params.py  utils.py
alstm_stock_market/src/app/: app.py
alstm_stock_market/src/data/: preprocessor.py
alstm_stock_market/src/helpers/: plotter.py  utils.py
alstm_stock_market/src/helpers/calendars/: us.cal
alstm_stock_market/src/manager/: manager.py  strategies.py
alstm_stock_market/src/model/: evaluator.py  model.py  params.py  preprocessor.py
src/: data.py  model.py  params.py  utils.py
