[tool.poetry]
name = "alstm-stock-market"
version = "0.1.0"
description = "Attention LSTM model to predict S&P500 close price"
authors = ["gvmossato_loyall <gabriel@loyall.com.br>"]
readme = "README.md"
packages = [{ include = "alstm_stock_market" }]

[tool.poetry.scripts]
start = "alstm_stock_market.run:__main__"

[tool.poetry.dependencies]
python = ">=3.11,<3.12.0"
pandas = "^2.1.1"
numpy = "1.23.5"
plotly = "^5.17.0"
scikit-learn = "^1.3.2"
scikeras = "^0.12.0"
PyWavelets = "^1.4.1"
yfinance = "^0.2.31"
kaleido = "0.2.1"
scikit-optimize = "^0.9.0"

# Workaround for issue between poetry and tensorflow
# @see: https://github.com/python-poetry/poetry/issues/8271
tensorflow = { version = "^2.14.0" }
tensorflow-macos = { version = "^2.13.0", platform = "darwin", markers = "platform_machine=='arm64'" }
tensorflow-intel = { version = "^2.13.0", platform = "win32" }
tensorflow-cpu = [
    { version = "^2.13.0", platform = "linux", markers = "platform_machine!='arm64' and platform_machine!='aarch64'" },
    { version = "^2.13.0", platform = "darwin", markers = "platform_machine!='arm64' and platform_machine!='aarch64'" },
]
tensorflow-cpu-aws = { version = "^2.13.0", platform = "linux", markers = "platform_machine=='arm64' or platform_machine=='aarch64'" }
tensorflow-io-gcs-filesystem = [
    { version = ">= 0.23.1", markers = "platform_machine!='arm64' or platform_system!='Darwin'" },
    { version = "< 0.32.0", markers = "platform_system == 'Windows'" },
]
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
